Fixed footer jump, added default title (#3) (#5)

--- a/_sass/_organisms.scss
+++ b/_sass/_organisms.scss
@@ -45,7 +45,7 @@ $grid-gap: 1rem;
 }
 body {
   @include grid-h-center;
-  align-content: baseline; // Make areas stick to the top
+  align-content: space-between;
 }
 // .footlinks { // when we have a footer
 //   @include footlinks;
